--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "pg": "4.x",
+    "cool-ascii-faces": "1.3.3",
     "ejs": "2.3.3",
     "express": "4.13.3",
-    "cool-ascii-faces": "1.3.3"
+    "pg": "4.x",
+    "url": "0.11.0"
   },
   "repository": {
     "type": "git",
