--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "2.3.3",
     "express": "4.13.3",
     "pg": "4.x",
-    "url": "0.11.0"
+    "url": "0.11.0",
+    "unix-timestamp": "0.2.0"
   },
   "repository": {
     "type": "git",
